== 0.6.5
* Windows support

== < 0.6.5
See https://github.com/janlelis/fancy_irb/commits/0.6.4